update all API Structure