@@ -1,9 +1,9 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.binaryContent.BinaryContentCreateDto;
-import com.sprint.mission.discodeit.dto.user.UserCreate;
+import com.sprint.mission.discodeit.dto.binaryContent.BinaryContentCreateRequest;
+import com.sprint.mission.discodeit.dto.user.UserCreateRequest;
 import com.sprint.mission.discodeit.dto.user.UserDto;
-import com.sprint.mission.discodeit.dto.user.UserUpdate;
+import com.sprint.mission.discodeit.dto.user.UserUpdateRequest;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.entity.UserStatus;
@@ -11,37 +11,38 @@ import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.repository.UserStatusRepository;
 import com.sprint.mission.discodeit.service.UserService;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-@Service
 @RequiredArgsConstructor
+@Service
 public class BasicUserService implements UserService {
 
   private final UserRepository userRepository;
+  //
   private final BinaryContentRepository binaryContentRepository;
   private final UserStatusRepository userStatusRepository;
 
   @Override
-  public User createUser(UserCreate userCreateDTO,
-      Optional<BinaryContentCreateDto> profileCreateDto) {
-    String username = userCreateDTO.username();
-    String userEmail = userCreateDTO.userEmail();
-    if (userRepository.existsByEmail(userEmail)) {
-      throw new IllegalArgumentException("이미 가입되어있는 이메일입니다." + userEmail + "다른 이메일을 사용해주세요");
+  public User create(UserCreateRequest userCreateRequest,
+      Optional<BinaryContentCreateRequest> optionalProfileCreateRequest) {
+    String username = userCreateRequest.username();
+    String email = userCreateRequest.email();
+
+    if (userRepository.existsByEmail(email)) {
+      throw new IllegalArgumentException("User with email " + email + " already exists");
     }
     if (userRepository.existsByUsername(username)) {
-      throw new IllegalArgumentException(("이미 사용중인 닉네임입니다." + username + "다른 이름을 사용해주세요!"));
+      throw new IllegalArgumentException("User with username " + username + " already exists");
     }
 
-    UUID nullableProfileId = profileCreateDto
+    UUID nullableProfileId = optionalProfileCreateRequest
         .map(profileRequest -> {
           String fileName = profileRequest.fileName();
           String contentType = profileRequest.contentType();
@@ -51,48 +52,49 @@ public class BasicUserService implements UserService {
           return binaryContentRepository.save(binaryContent).getId();
         })
         .orElse(null);
-    String password = userCreateDTO.password();
+    String password = userCreateRequest.password();
 
-    User user = new User(username, userEmail, password, nullableProfileId);
+    User user = new User(username, email, password, nullableProfileId);
     User createdUser = userRepository.save(user);
 
     Instant now = Instant.now();
-    UserStatus userStatus = new UserStatus(createdUser.getUserId(), now);
+    UserStatus userStatus = new UserStatus(createdUser.getId(), now);
     userStatusRepository.save(userStatus);
 
     return createdUser;
   }
 
   @Override
-  public UserDto findById(UUID userId) {
+  public UserDto find(UUID userId) {
     return userRepository.findById(userId)
         .map(this::toDto)
-        .orElseThrow(() -> new NoSuchElementException(userId + ": 해당 유저를 찾을 수 없습니다."));
+        .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
   }
 
   @Override
   public List<UserDto> findAll() {
     return userRepository.findAll()
         .stream()
-        .map(this::toDto).collect(Collectors.toList());
+        .map(this::toDto)
+        .toList();
   }
 
   @Override
-  public User update(UUID userId, UserUpdate userUpdate,
-      Optional<BinaryContentCreateDto> profileCreateDto) {
+  public User update(UUID userId, UserUpdateRequest userUpdateRequest,
+      Optional<BinaryContentCreateRequest> optionalProfileCreateRequest) {
     User user = userRepository.findById(userId)
-        .orElseThrow(() -> new NoSuchElementException(userId + " : 찾을 수 없는 유저입니다."));
+        .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
 
-    String newUsername = userUpdate.username();
-    String newEmail = userUpdate.userEmail();
+    String newUsername = userUpdateRequest.newUsername();
+    String newEmail = userUpdateRequest.newEmail();
     if (userRepository.existsByEmail(newEmail)) {
-      throw new IllegalArgumentException("이미 가입되어있는 이메일 입니다." + newEmail);
+      throw new IllegalArgumentException("User with email " + newEmail + " already exists");
     }
     if (userRepository.existsByUsername(newUsername)) {
-      throw new IllegalArgumentException("사용중인 닉네임입니다" + newUsername + "다른 이름을 사용해주세요");
+      throw new IllegalArgumentException("User with username " + newUsername + " already exists");
     }
 
-    UUID nullableProfileId = profileCreateDto
+    UUID nullableProfileId = optionalProfileCreateRequest
         .map(profileRequest -> {
           Optional.ofNullable(user.getProfileId())
               .ifPresent(binaryContentRepository::deleteById);
@@ -106,7 +108,7 @@ public class BasicUserService implements UserService {
         })
         .orElse(null);
 
-    String newPassword = userUpdate.password();
+    String newPassword = userUpdateRequest.newPassword();
     user.update(newUsername, newEmail, newPassword, nullableProfileId);
 
     return userRepository.save(user);
@@ -115,7 +117,7 @@ public class BasicUserService implements UserService {
   @Override
   public void delete(UUID userId) {
     User user = userRepository.findById(userId)
-        .orElseThrow(() -> new NoSuchElementException(userId + "를 찾을 수 없습니다."));
+        .orElseThrow(() -> new NoSuchElementException("User with id " + userId + " not found"));
 
     Optional.ofNullable(user.getProfileId())
         .ifPresent(binaryContentRepository::deleteById);
@@ -125,16 +127,16 @@ public class BasicUserService implements UserService {
   }
 
   private UserDto toDto(User user) {
-    Boolean online = userStatusRepository.findByUserId(user.getUserId())
+    Boolean online = userStatusRepository.findByUserId(user.getId())
         .map(UserStatus::isOnline)
         .orElse(null);
 
     return new UserDto(
-        user.getUserId(),
+        user.getId(),
         user.getCreatedAt(),
         user.getUpdatedAt(),
         user.getUsername(),
-        user.getUserEmail(),
+        user.getEmail(),
         user.getProfileId(),
         online
     );
